# terrain-generator

./: Cargo.toml  README.md
shaders/: light.frag  light.vert  shape.frag  shape.vert
src/: chunk.rs  chunk_container.rs  curve_editor.rs  lod.rs  main.rs  material.rs  mesh.rs  noise.rs  noise_map.rs  point_light.rs  scenenode.rs  shader.rs  terrain_gradient.rs  triangle.rs  utils.rs  vertex.rs
src/camera/: mod.rs
src/chunk/: chunk.rs  mod.rs
src/curve_editor/: curve.rs  curve_widget.rs  mod.rs
src/light/: mod.rs  point_light.rs  point_light_settings.rs
src/material/: material_settings.rs  mod.rs
src/mesh/: mesh_material.rs  mesh_settings.rs  mod.rs
src/noise_map/: mod.rs  noise_map_settings.rs
