[package]
name = "terrain-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.29.1"
gl = "0.14.0"
nalgebra-glm = "0.18.0"
libc = "0.2.144"
lerp = "0.4.0"
imgui = "0.9.0"
imgui-winit-support = "0.9.0"
imgui-opengl-renderer = "0.12.0"
noise = "0.8.2"
lininterp = "0.1.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
bezier-rs = "0.2.0"
